--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -69,3 +69,10 @@
     background-color: #dddddd35;
   }
 }
+
+@media (max-width: 500px) {
+  .login {
+    display: flex;
+    flex-direction: column;
+  }
+}
