--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -173,3 +173,27 @@
     }
   }
 }
+
+@media (max-width: 500px) {
+  .chat {
+    .center {
+      width: 100%;
+    }
+
+    .bottom {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+
+      .emoji {
+        position: relative;
+
+        .picker {
+          position: absolute;
+          left: -170px;
+          bottom: 50px;
+        }
+      }
+    }
+  }
+}
