--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
 
 body {
   background-image: url("/bg1.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,4 +33,22 @@ body {
   font-size: 36px;
   border-radius: 10px;
   background-color: rgba(17, 25, 40, 0.9);
+}
+
+@media (max-width: 500px) {
+  body {
+    height: auto;
+  }
+
+  .container {
+    height: fit-content;
+    margin: 10px 0;
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+
+    .chat {
+      width: 100%;
+    }
+  }
 }
